cluster/kubernetes/internal/qubt-caddy/ingress/qubt-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qubt-caddy
  namespace: internal
  labels:
    route-label: external-dns-internal
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: qubt-caddy
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: qubt-caddy-web-svc
          port: 8080
